--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.AndroidBuildingMusicPlayerActivity"
+        <activity android:name=".ui.activity.MusicPlayerActivity"
             android:configChanges="keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +19,9 @@
             </intent-filter>
         </activity>
 
-
         <activity android:name=".ui.activity.PlaylistActivity" />
+
+        <service android:name=".service.MusicService" />
     </application>
 
 </manifest>
