create MusicPlayerWidgetService -- Still not working properly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,18 @@
 
         <service android:name=".service.MusicService" />
 
-        <meta-data
-            android:name="android.appwidget.provider"
-            android:resource="@xml/music_player_widget" />
+        <service android:name=".widget.MusicPlayerWidgetService" />
+
+        <receiver android:name=".widget.MusicPlayerWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/music_player_widget" />
+        </receiver>
+
 
     </application>
 
