create BroadcastReceiver to start MusicService when phone turns on.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,13 @@
                 android:resource="@xml/music_player_widget" />
         </receiver>
 
+        <receiver android:name=".receiver.StartMusicServiceBroadcastReceiver" android:enabled="true" android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
+
 
     </application>
 
